@@ -5,8 +5,8 @@
 
 export APP_NAME='modrana'
 export APP_VERSION_MAIN='0'
-export APP_VERSION_MINOR='41'
-export APP_VERSION_BUILD='2'
+export APP_VERSION_MINOR='42'
+export APP_VERSION_BUILD='1'
 
 ## add changelog on the lines after
 ## "APP_CHANGELOG=$( cat <<EOF"
@@ -14,11 +14,15 @@ export APP_VERSION_BUILD='2'
 ## "EOF"
 
 export APP_CHANGELOG=$( cat <<EOF
-- fix modRana not showing monav routing data packs
-- if map folder path is redirected by config file option, the monav routing data folder is also using the redirected path
-- new option for disabling (almost) all animations in QML GUI
- - the option is in Options->UI
- - when enabled, page switching becomes ridiculously fast, even on the N900 :)
- - dialog animations are still ON, as there doesn't seem to be a clear way of switching them OFF
+- add batch tile redownload & update
+ - accessible from the "Edit" submenu in batch dl menu
+ - redownload ON -> download all tiles, even when locally available
+ - redownload OFF (default) -> download only tiles that are not locally available
+ - redownload update -> download only tiles that ARE locally available
+- add 32bit (i386) Monav routing server binary by jperon - Thanks !
+ - this should make offline routing on 32bit x86 machines possible
+- preliminary support for high DPI screens in QML GUI
+- fix online routing not respecting directions language
+- fix tracebacks with some routes from Monav offline routing
 EOF
 )
