@@ -1,1 +1,1 @@
-https://api.pub.meego.com
+https://api.merproject.org
